==> okalachev/flixperiph/ICM20948.cpp <==
#include "ICM20948.h"

bool ICM20948::initMagnetometer() {
	enableI2CMaster();
	resetMag();
	reset();
	sleep(false);
	writeRegister8(2, ICM20948_ODR_ALIGN_EN, 1); // aligns ODR

	bool initSuccess = false;
	uint8_t tries = 0;
	while (!initSuccess && (tries < 10)) { // max. 10 tries to init the magnetometer
		delay(10);
		enableI2CMaster();
		delay(10);

		int16_t whoAmI = whoAmIMag();
		if (!((whoAmI == AK09916_WHO_AM_I_1) || (whoAmI == AK09916_WHO_AM_I_2))) {
			initSuccess = false;
			i2cMasterReset();
			tries++;
		}
		else {
			initSuccess = true;
		}
	}
	if (initSuccess) {
		setMagOpMode(AK09916_CONT_MODE_100HZ);
	}
	return initSuccess;
}

void ICM20948::switchBank(uint8_t newBank) {
	if (newBank != currentBank) {
		currentBank = newBank;
		if (!useSPI) {
			_wire->beginTransmission(i2cAddress);
			_wire->write(ICM20948_REG_BANK_SEL);
			_wire->write(currentBank<<4);
			_wire->endTransmission();
		} else {
			_spi->beginTransaction(mySPISettings);
			digitalWrite(csPin, LOW);
			_spi->transfer(ICM20948_REG_BANK_SEL);
			_spi->transfer(currentBank<<4);
			digitalWrite(csPin, HIGH);
			_spi->endTransaction();
		}
	}
}

void ICM20948::writeRegister8(uint8_t bank, uint8_t reg, uint8_t val) {
	switchBank(bank);

	if (!useSPI) {
		_wire->beginTransmission(i2cAddress);
		_wire->write(reg);
		_wire->write(val);
		_wire->endTransmission();
	} else {
		_spi->beginTransaction(mySPISettings);
		digitalWrite(csPin, LOW);
		_spi->transfer(reg);
		_spi->transfer(val);
		digitalWrite(csPin, HIGH);
		_spi->endTransaction();
	}
}

void ICM20948::writeRegister16(uint8_t bank, uint8_t reg, int16_t val) {
	switchBank(bank);
	int8_t MSByte = static_cast<int8_t>((val>>8) & 0xFF);
	uint8_t LSByte = val & 0xFF;

	if (!useSPI) {
		_wire->beginTransmission(i2cAddress);
		_wire->write(reg);
		_wire->write(MSByte);
		_wire->write(LSByte);
		_wire->endTransmission();
	} else {
		_spi->beginTransaction(mySPISettings);
		digitalWrite(csPin, LOW);
		_spi->transfer(reg);
		_spi->transfer(val);
		digitalWrite(csPin, HIGH);
		_spi->endTransaction();
	}
}

uint8_t ICM20948::readRegister8(uint8_t bank, uint8_t reg) {
	switchBank(bank);
	uint8_t regValue = 0;

	if(!useSPI){
		_wire->beginTransmission(i2cAddress);
		_wire->write(reg);
		_wire->endTransmission(false);
		_wire->requestFrom(i2cAddress, static_cast<uint8_t>(1));
		if(_wire->available()){
			regValue = _wire->read();
		}
	} else {
		reg |= 0x80;
		_spi->beginTransaction(mySPISettings);
		digitalWrite(csPin, LOW);
		_spi->transfer(reg);
		regValue = _spi->transfer(0x00);
		digitalWrite(csPin, HIGH);
		_spi->endTransaction();
	}
	return regValue;
}

int16_t ICM20948::readRegister16(uint8_t bank, uint8_t reg) {
	switchBank(bank);
	uint8_t MSByte = 0, LSByte = 0;
	int16_t reg16Val = 0;

	if (!useSPI) {
		_wire->beginTransmission(i2cAddress);
		_wire->write(reg);
		_wire->endTransmission(false);
		_wire->requestFrom(i2cAddress, static_cast<uint8_t>(2));
		if(_wire->available()){
			MSByte = _wire->read();
			LSByte = _wire->read();
		}
	} else {
		reg = reg | 0x80;
		_spi->beginTransaction(mySPISettings);
		digitalWrite(csPin, LOW);
		_spi->transfer(reg);
		MSByte = _spi->transfer(0x00);
		LSByte = _spi->transfer(0x00);
		digitalWrite(csPin, HIGH);
		_spi->endTransaction();
	}
	reg16Val = (MSByte<<8) + LSByte;
	return reg16Val;
}

void ICM20948::readAllData(uint8_t* data) {
	switchBank(0);

	if(!useSPI){
		_wire->beginTransmission(i2cAddress);
		_wire->write(ICM20948_ACCEL_OUT);
		_wire->endTransmission(false);
		_wire->requestFrom(i2cAddress, static_cast<uint8_t>(20));
		if(_wire->available()){
			for(int i=0; i<20; i++){
				data[i] = _wire->read();
			}
		}
	}
	else{
		uint8_t reg = ICM20948_ACCEL_OUT | 0x80;
		_spi->beginTransaction(mySPISettings);
		digitalWrite(csPin, LOW);
		_spi->transfer(reg);
		for(int i=0; i<20; i++){
				data[i] = _spi->transfer(0x00);
		}
		digitalWrite(csPin, HIGH);
		_spi->endTransaction();
	}
}
