==> SkyCode-Jiang/IMU/ICM20948/My_ICM20948/My_ICM20948/MDK-ARM/ICM20948/icm20948.c <==
#include "icm20948.h"

uint8_t initMagnetometer(){
    enableI2CMaster();
    resetMag();
    reset_ICM20948();
    icmsleep(false);
    writeRegister8(2, ICM20948_ODR_ALIGN_EN, 1); // aligns ODR 
    enableI2CMaster();
    
    
    if(!(whoAmIMag() == AK09916_WHO_AM_I)){
        return false;
    }
    
    setMagOpMode(AK09916_CONT_MODE_100HZ); 
   
    return true;
}

void switchBank(uint8_t newBank){
		uint8_t bank = 0;
    if(newBank != currentBank){
        currentBank = newBank;
//        _wire->beginTransmission(i2cAddress);
//        _wire->write(ICM20948_REG_BANK_SEL);
//        _wire->write(currentBank<<4);
//        _wire->endTransmission();
				bank = currentBank<<4;
				HAL_I2C_Mem_Write(&hi2c1,ICM20948_WRITE,ICM20948_REG_BANK_SEL,I2C_MEMADD_SIZE_8BIT,&bank,sizeof(bank),10);
    }
}

uint8_t writeRegister8(uint8_t bank, uint8_t reg, uint8_t val){
    switchBank(bank);
//    _wire->beginTransmission(i2cAddress);
//    _wire->write(reg);
//    _wire->write(val);
    
//    return _wire->endTransmission();
	
	HAL_I2C_Mem_Write(&hi2c1,ICM20948_WRITE,reg,I2C_MEMADD_SIZE_8BIT,&val,sizeof(val),10);
			return 0;
}

uint8_t writeRegister16(uint8_t bank, uint8_t reg, uint16_t val){
    switchBank(bank);
    uint8_t MSByte = ((val>>8) & 0xFF);
    uint8_t LSByte = val & 0xFF;
//    _wire->beginTransmission(i2cAddress);
//    _wire->write(reg);
//    _wire->write(MSByte);
//    _wire->write(LSByte);
//    
//    return _wire->endTransmission();  
//		HAL_I2C_Mem_Write(&hi2c1,i2cAddress,reg,I2C_MEMADD_SIZE_16BIT,&val,sizeof(val),10);
		HAL_I2C_Mem_Write(&hi2c1,ICM20948_WRITE,reg,I2C_MEMADD_SIZE_8BIT,&MSByte,sizeof(MSByte),10);
		HAL_I2C_Mem_Write(&hi2c1,ICM20948_WRITE,reg+1,I2C_MEMADD_SIZE_8BIT,&LSByte,sizeof(MSByte),10);
		return 0;
}

uint8_t readRegister8(uint8_t bank, uint8_t reg){
    switchBank(bank);
    uint8_t regValue = 0;
//    _wire->beginTransmission(i2cAddress);
//    _wire->write(reg);
//    _wire->endTransmission(false);
//    _wire->requestFrom(i2cAddress,1);
//    if(_wire->available()){
//        regValue = _wire->read();
//    }
		HAL_I2C_Mem_Read(&hi2c1,ICM20948_READ,reg,I2C_MEMADD_SIZE_8BIT,&regValue,sizeof(regValue),10);
    return regValue;
}

int16_t readRegister16(uint8_t bank, uint8_t reg){
    switchBank(bank);
    uint8_t MSByte = 0, LSByte = 0;
    int16_t reg16Val = 0;
//    _wire->beginTransmission(i2cAddress);
//    _wire->write(reg);
//    _wire->endTransmission(false);
//    _wire->requestFrom(i2cAddress,2);
//    if(_wire->available()){
//        MSByte = _wire->read();
//        LSByte = _wire->read();
//    }
//    reg16Val = (MSByte<<8) + LSByte;
			HAL_I2C_Mem_Read(&hi2c1,ICM20948_READ,reg,I2C_MEMADD_SIZE_8BIT,&MSByte,sizeof(MSByte),10);
			HAL_I2C_Mem_Read(&hi2c1,ICM20948_READ,reg+1,I2C_MEMADD_SIZE_8BIT,&LSByte,sizeof(MSByte),10);
			reg16Val = (MSByte<<8) + LSByte;
//		HAL_I2C_Mem_Read(&hi2c1,i2cAddress,reg,I2C_MEMADD_SIZE_16BIT,&reg16Val,sizeof(reg16Val),10);
    return reg16Val;
}

void readAllData(uint8_t* data){    
     switchBank(0);
//    _wire->beginTransmission(i2cAddress);
//    _wire->write(ICM20948_ACCEL_OUT);
//    _wire->endTransmission(false);
//    _wire->requestFrom(i2cAddress,20);
//    if(_wire->available()){
//        for(int i=0; i<20; i++){
//            data[i] = _wire->read();
//        }
//    }
	uint8_t i = 0;	
	for(i = 0 ; i<20 ;i = i + 1)
  {
		nowReg = ICM20948_ACCEL_OUT + i;
		HAL_I2C_Mem_Read(&hi2c1,ICM20948_READ,nowReg,I2C_MEMADD_SIZE_8BIT,&getRes,1,10);
    data[i] = getRes;
  }
}
